--- a/src/main/resources/Templates/Home/index.html
+++ b/src/main/resources/Templates/Home/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1. ÅRS ERHVERVSPROJEKT</title>
+    <title>ERHVERVSPROJEKT</title>
 </head>
 <body>
 
-<h1>1. ÅRS ERHVERVSPROJEKT</h1>
+<h1>ERHVERVSPROJEKT</h1>
 
 </body>
 </html>
