se alle sessioner knap

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -5,6 +5,11 @@
     <title>Main Menu</title>
 </head>
 <body>
+<h1> Hoved Menu </h1>
+
+<a href="/sessionList">
+    <button class="btn-sessionList btn" id="btn-sessionList">Se alle sessioner</button>
+</a>
 
 </body>
 </html>
