Project list html fixed

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -5,10 +5,16 @@
     <title>Main Menu</title>
 </head>
 <body>
-<h1> Hoved Menu </h1>
+<h1> HovedMenu </h1>
 
+<a href="/employeeList">
+    <button class="btn-employeeList btn" id="btn-employeeList">Vis medarbejderliste</button>
+</a>
 <a href="/sessionList">
     <button class="btn-sessionList btn" id="btn-sessionList">Se alle sessioner</button>
+</a>
+<a href="/projectList">
+    <button class="btn-projectList btn" id="btn-projectList">Se alle projekter</button>
 </a>
 
 </body>
