--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<h1>Alle sessioner</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Session ID</th>
+        <th>Tid dato</th>
+        <th>Tid start</th>
+        <th>Medarbejder navn</th>
+        <th>Projekt navn</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="sessionTime:${sessionsTime}">
+
+        <td th:text="${sessionTime.sessionTimeID}"/>
+        <td th:text="${sessionTime.sessionTimeDate}"/>
+        <td th:text="${sessionTime.sessionTimeStart}"/>
+        <td th:text="${sessionTime.sessionTimeEnd}"/>
+        <td th:text="${sessionTime.sessionTimeEmpID}"/>
+        <td th:text="${sessionTime.sessionTimeProID}"/>
+        <td>
+            <a th:href="@{'/update/'+${sessionTime.sessionTimeID}}">
+                <button class="btn-update btn" id="btn-update">Opdater</button>
+            </a>
+
+            <a th:href="@{'/delete/'+${sessionTime.sessionTimeID}}">
+                <button class="btn-delete btn" id="btn-delete">Slet</button>
+            </a>
+        </td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
