--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Employee List</title>
 </head>
 <body>
 
-<h1>Employee list</h1>
-
 <a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+
+<h1>Employee List</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+        <th>Telephone Number</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="employee:${employees}">
+        <td th:text="${employee.employeeID}"/>
+        <td th:text="${employee.employeeFirstName}"/>
+        <td th:text="${employee.employeeLastName}"/>
+        <td th:text="${employee.employeeEmail}"/>
+        <td th:text="${employee.employeePhone}"/>
+    </tr>
+    </tbody>
+</table>
+
 
 </body>
 </html>
