--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Alle sessioner</h1>
+<h1><a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
+<h2>Alle sessioner</h2>
 
 <table>
     <thead>
@@ -39,7 +40,7 @@
     </tbody>
 </table>
 
-<a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+
 
 </body>
 </html>
