--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+<a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
 
 <h1>Employee List</h1>
 
