--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -5,7 +5,7 @@
     <title>Main Menu</title>
 </head>
 <body>
-<h1><a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
 
 <a href="/employeeList">
     <button class="btn-employeeList btn" id="btn-employeeList">Vis medarbejderliste</button>
