--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1><a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
 <h2>Project List</h2>
 
 <table>
