--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Session</h1>
-
 <h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
+<h2>Opdater Session</h2>
+
 
 <form action="/sessionUpdate" method="post" th:each="sessionTime:${sessionsTime}">
 
