--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
+<a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
 <h2>Opdater Session</h2>
 
 
