Delete sessionTime and Project now works, some button CSS work

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
 <h1>
@@ -10,13 +11,13 @@
 </h1>
 
 <a href="/employeeList">
-    <button class="btn-employeeList btn" id="btn-employeeList">Vis medarbejderliste</button>
+    <button class="blue" id="btn-employeeList">Vis medarbejderliste</button>
 </a>
 <a href="/sessionList">
-    <button class="btn-sessionList btn" id="btn-sessionList">Se alle sessioner</button>
+    <button class="blue" id="btn-sessionList">Se alle sessioner</button>
 </a>
 <a href="/projectList">
-    <button class="btn-projectList btn" id="btn-projectList">Se alle projekter</button>
+    <button class="blue" id="btn-projectList">Se alle projekter</button>
 </a>
 
 </body>
