--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee List</title>
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
 
