--- a/src/main/resources/Templates/Home/AddEmployee.html
+++ b/src/main/resources/Templates/Home/AddEmployee.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opret medarbejder</title>
+    <link rel="stylesheet" type="text/css" href="addEmployee.css">
 </head>
 <body>
 
