CSS work on tables and connected WizKids logo with title

--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -7,19 +7,17 @@
 </head>
 <body>
 
-<a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
-
-<h1>Employee List</h1>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Alle sessioner</h1>
 
 
 <table>
     <thead>
     <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Telephone Number</th>
+        <th>Employee-ID: </th>
+        <th>Fornavn: </th>
+        <th>Efternavn: </th>
+        <th>E-mail</th>
+        <th>Telefon nummer: </th>
     </tr>
     </thead>
     <tbody>
