--- a/src/main/resources/Templates/Home/AddEmployee.html
+++ b/src/main/resources/Templates/Home/AddEmployee.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Opret ny medarbejder</h1>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Tilføj medarbejder</h1>
 
     <form action="/addEmployee" method="post">
 
