--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
-<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a></h1>
-<h2>Alle sessioner</h2>
-
-
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Alle sessioner</h1>
 
 <table>
     <thead>
