--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
-<a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
-<h2>Opdater Session</h2>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Opdater session</h1>
 
 
 <form action="/updateSession" method="post">
