--- a/src/main/resources/Templates/Home/UpdateProject.html
+++ b/src/main/resources/Templates/Home/UpdateProject.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="MyCss.css"/>
 </head>
 <body>
-<h1>Update Project</h1>
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Opdater projekt</h1>
+
+
+
 <form action="/updateProject" method="post">
     <input type="text" name="projectID" th:value="${project.projectID}" />
     <input type="text" name="projectName" th:value="${project.projectName}" />
