Add projekt fungere nu

--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -11,6 +11,11 @@
 
 <h2>Project List</h2>
 
+<a href="/addProject">
+    <button class="blue" id="btn-addProject">Opret Projekt</button>
+</a>
+
+
 <table>
     <thead>
     <tr>
@@ -45,6 +50,8 @@
     </tr>
     </tbody>
 </table>
+
+
 
 </body>
 </html>
