Update project works, update session just returns to main menu without any changes

--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -10,6 +10,10 @@
 <h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Alle sessioner</h1>
 
 
+<a href="/addEmployee">
+    <button class="green" id="btn-addEmployee">Opret ny Medarbejder</button>
+</a>
+
 <table>
     <thead>
     <tr>
@@ -36,9 +40,6 @@
     </tbody>
 </table>
 
-<a href="/addEmployee">
-    <button class="blue" id="btn-addEmployee">Opret ny Medarbejder</button>
-</a>
 
 </body>
 </html>
