--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -9,7 +9,7 @@
 <h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Alle projekter</h1>
 
 <a href="/addProject">
-    <button class="blue" id="btn-addProject">Opret Projekt</button>
+    <button class="green" id="btn-addProject">Opret projekt</button>
 </a>
 
 
@@ -37,7 +37,7 @@
         <td>
 
             <a th:href="@{'/updateProject/'+${project.projectID}}">
-                <button class="blue" id="btn-updateProject">Update</button>
+                <button class="blue" id="btn-updateProject">Opdater</button>
             </a>
 
             <a th:href="@{'/deleteProject/'+${project.projectID}}">
