--- a/src/main/resources/Templates/Home/AddProject.html
+++ b/src/main/resources/Templates/Home/AddProject.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Opret ny medarbejder</h1>
+
+<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Tilføj medarbejder</h1>
 
 <form action="/addProject" method="post">
 
