--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -8,7 +8,6 @@
 <body>
 <h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Opdater session</h1>
 
-
 <form action="/updateSession" method="post">
 
     <table>
@@ -17,7 +16,7 @@
                 <p>Session ID: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeID" th:value="${sessionTime.sessionTimeID}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeID}"/>
             </td>
         </tr>
         <tr>
@@ -25,7 +24,7 @@
                 <p>Dato for start: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeDate" th:value="${sessionTime.sessionTimeDate}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeDate}"/>
             </td>
         </tr>
         <tr>
@@ -33,7 +32,7 @@
                 <p>Tid start: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeStart" th:value="${sessionTime.sessionTimeStart}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeStart}"/>
             </td>
         </tr>
         <tr>
@@ -41,7 +40,7 @@
                 <p>Tid slut: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeEnd" th:value="${sessionTime.sessionTimeEnd}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeEnd}"/>
             </td>
         </tr>
         <tr>
@@ -49,7 +48,7 @@
                 <p>Employee ID: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeEmpID" th:value="${sessionTime.sessionTimeEmpID}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeEmpID}"/>
             </td>
         </tr>
         <tr>
@@ -57,18 +56,15 @@
                 <p>Project ID: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeProID" th:value="${sessionTime.sessionTimeProID}"/>
+                <input type="text" name="sessions" th:value="${sessions.sessionTimeProID}"/>
             </td>
         </tr>
 
-        </tr>
+        <input type="submit" value="Save changes"/>
+
     </table>
 
-    <tr>
-        <input class="submit" type="submit" value="Save changes"/>
-    </tr>
 
 </form>
-
 </body>
 </html>
