--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -9,6 +9,7 @@ button {
     font-weight: bold;
     font-size: 9pt;
     outline: none;
+    margin: 3px;
 }
 
 button:hover {
@@ -40,24 +41,24 @@ button.blue:hover {
 button.blue:active {
     box-shadow: inset 0 2px 5px #2370FE;
 }
-
 /* Green button*/
-button.blue {
+button.green {
     color: white;
-    background: #4C8FFB;
-    border: 1px #3079ED solid;
-    box-shadow: inset 0 1px 0 #80B0FB;
+    background: #90fb43;
+    border: 1px #84ed2a solid;
+    box-shadow: inset 0 1px 0 #a3fb65;
 }
 
-button.blue:hover {
-    border: 1px #2F5BB7 solid;
-    box-shadow: 0 1px 1px #EAEAEA, inset 0 1px 0 #5A94F1;
-    background: #3F83F1;
+button.green:hover {
+    border: 1px #54b721 solid;
+    box-shadow: 0 1px 1px #EAEAEA, inset 0 1px 0 #acf15b;
+    background: #92f12d;
 }
 
-button.blue:active {
-    box-shadow: inset 0 2px 5px #2370FE;
+button.green:active {
+    box-shadow: inset 0 2px 5px #85fe1e;
 }
+
 
 /* Red button */
 button.red {
