--- a/src/main/resources/Templates/Home/AddEmployee.html
+++ b/src/main/resources/Templates/Home/AddEmployee.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Opret medarbejder</title>
-    <link rel="stylesheet" type="text/css" href="addEmployee.css">
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
-
-<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Tilføj medarbejder</h1>
+<h1>
+    <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+    -Tilføj medarbejder
+</h1>
 
     <form action="/addEmployee" method="post">
 
