--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <link rel="stylesheet" type="text/css" href="MyCss.css"/>
 </head>
 <body>
 <h1>
-    <a href="/"><img id="logo1" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+    <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> -Hovedmenu
 </h1>
 
 <a href="/employeeList">
