--- a/src/main/resources/Templates/Home/ProjectUpdate.html
+++ b/src/main/resources/Templates/Home/ProjectUpdate.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Update</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css"/>
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
-<h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Opdater projekt</h1>
+<h1>
+    <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+    -Opdater Projekt
+</h1>
 
-
-
-<form action="/updateProject" method="post">
-    <table>
-        <tr>
-            <td>
+    <form action="/updateProject" method="post">
+       <table>
+          <tr>
+             <td>
                 <p>Project-ID: </p>
-            </td>
-            <td>
+              </td>
+              <td>
                 <input type="text" name="projectID" th:value="${project.projectID}" />
-            </td>
-        </tr>
+              </td>
+          </tr>
 
         <tr>
             <td>
@@ -72,6 +73,5 @@
     </table>
 
 </form>
-
 </body>
 </html>
