Update sessions works limited. Cant update project id and employee id.

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -10,15 +10,29 @@
     <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> -Hovedmenu
 </h1>
 
-<a href="/employeeList">
-    <button class="blue" id="btn-employeeList">Vis medarbejderliste</button>
-</a>
-<a href="/sessionList">
-    <button class="blue" id="btn-sessionList">Se alle sessioner</button>
-</a>
-<a href="/projectList">
-    <button class="blue" id="btn-projectList">Se alle projekter</button>
-</a>
+
+<table>
+    <td>
+        <a href="/employeeList">
+            <button class="blue" id="btn-employeeList">Vis medarbejderliste</button>
+        </a>
+    </td>
+    <td>
+        <a href="/sessionList">
+            <button class="blue" id="btn-sessionList">Se alle sessioner</button>
+        </a>
+    </td>
+    <td>
+        <a href="/projectList">
+            <button class="blue" id="btn-projectList">Se alle projekter</button>
+        </a>
+    </td>
+</table>
+
+
+
+
+
 
 </body>
 </html>
