--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -16,10 +16,10 @@
     <table>
         <tr>
             <td>
-                <p>Session ID: </p>
+                <p>Session-ID: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeID}"/>
+                <input type="text" name="sessionTimeID" th:value="${sessions.sessionTimeID}"/>
             </td>
         </tr>
         <tr>
@@ -27,7 +27,7 @@
                 <p>Dato for start: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeDate}"/>
+                <input type="text" name="sessionTimeDate" th:value="${sessions.sessionTimeDate}"/>
             </td>
         </tr>
         <tr>
@@ -35,7 +35,7 @@
                 <p>Tid start: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeStart}"/>
+                <input type="text" name="sessionTimeStart" th:value="${sessions.sessionTimeStart}"/>
             </td>
         </tr>
         <tr>
@@ -43,7 +43,7 @@
                 <p>Tid slut: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeEnd}"/>
+                <input type="text" name="sessionTimeEnd" th:value="${sessions.sessionTimeEnd}"/>
             </td>
         </tr>
         <tr>
@@ -51,7 +51,7 @@
                 <p>Employee ID: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeEmpID}"/>
+                <input type="text" name="sessionTimeEmpID" th:value="${sessions.sessionTimeEmpID}"/>
             </td>
         </tr>
         <tr>
@@ -59,7 +59,7 @@
                 <p>Project ID: </p>
             </td>
             <td>
-                <input type="text" name="sessions" th:value="${sessions.sessionTimeProID}"/>
+                <input type="text" name="sessionTimeProID" th:value="${sessions.sessionTimeProID}"/>
             </td>
         </tr>
 
