--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -49,15 +49,15 @@ button.blue:active {
 /* Green button*/
 button.green {
     color: white;
-    background: #90fb43;
-    border: 1px #84ed2a solid;
-    box-shadow: inset 0 1px 0 #a3fb65;
+    background: #70ad47;
+    border: 1px #7add3a solid;
+    box-shadow: inset 0 1px 0 #8ad455;
 }
 
 button.green:hover {
     border: 1px #54b721 solid;
-    box-shadow: 0 1px 1px #EAEAEA, inset 0 1px 0 #acf15b;
-    background: #92f12d;
+    box-shadow: 0 1px 1px #EAEAEA, inset 0 1px 0 #96d24f;
+    background: #7aca26;
 }
 
 button.green:active {
@@ -104,7 +104,7 @@ table{
 }
 
 th{
-    background-color: lightblue;
+    background-color: #4472c4;
     height: 40px;
     font-size: 16px;
     color: white;
@@ -119,7 +119,7 @@ tr{
 }
 
 tr:nth-child(even){
-    background-color: lightgray;
+    background-color: #cdd4ea
 }
 
 
@@ -129,48 +129,4 @@ h1{
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
 }
-
-
-/* //////////////////////////// DROP DOWN////////////////// */
-/* Dropdown Button */
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
 
