--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -14,7 +14,7 @@
     <table>
         <tr>
             <td>
-                <label>Dato (YYYY-MM-DD):</label>
+                <label>Dato (YYYY-MM-DD): </label>
             </td>
             <td>
                 <input type ="text" name="sessionTimeDate"/>
@@ -23,7 +23,7 @@
 
         <tr>
             <td>
-                <label>Tid start:</label>
+                <label>Tid start: </label>
             </td>
             <td>
                 <input type ="text" name="sessionTimeStart"/>
@@ -32,7 +32,7 @@
 
         <tr>
             <td>
-                <label>Tid slut:</label>
+                <label>Tid slut: </label>
             </td>
             <td>
                 <input type ="text" name="sessionTimeEnd"/>
@@ -40,7 +40,7 @@
         </tr>
         <tr>
             <td>
-                <label>Medarbejder:</label>
+                <label>Medarbejder: </label>
             </td>
             <td>
                 <input type ="text" name="sessionTimeEmpID"/>
