CSS i lange baner Alt er nu ventreret på alle sider

--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Opret medarbejder</title>
     <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <style>
+        body{
+            background-color: whitesmoke;
+            text-align: center;
+        }
+        table{
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    </style>
 </head>
 <body>
 <h1>
