--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css"/>
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <style>
+        body {
+            background-color: whitesmoke;
+            text-align: center;
+        }
+        table{
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
-<h1>
+<div class="content">
+    <h1>
     <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> -Hovedmenu
-</h1>
+    </h1>
 
 
 <table>
@@ -33,6 +44,6 @@
 
 
 
-
+</div>
 </body>
 </html>
