--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Add project</title>
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <style>
+        body{
+            background-color: whitesmoke;
+            text-align: center;
+        }
+        table{
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
 
