--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Project List</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <link rel="stylesheet" type="text/css" href="MyCss.css"/>
+    <style>
+        body{
+            background-color: whitesmoke;
+            text-align: center;
+        }
+        table{
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
+
 <h1><a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a> - Alle projekter</h1>
 
 <a href="/addProject">
@@ -46,8 +57,6 @@
     </tr>
     </tbody>
 </table>
-
-
 
 </body>
 </html>
