--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Opret medarbejder</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
     <style>
         body{
             background-color: whitesmoke;
@@ -14,12 +13,12 @@
             margin-left: auto;
             margin-right: auto;
         }
-
     </style>
+
 </head>
 <body>
 <h1>
-    <a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+    <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
     -Tilføj medarbejder
 </h1>
 
