CSS i lange baner -logo til venstre -overskrift centreret -html + in-line css tilpasset

--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee List</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
             background-color: whitesmoke;
@@ -26,7 +26,7 @@
 <body>
 
 <div id="logo">
-<a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+<a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
 <h1>Alle medarbejdere</h1>
