--- a/src/main/resources/Templates/Home/EmployeeUpdate.html
+++ b/src/main/resources/Templates/Home/EmployeeUpdate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Update</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
             background-color: whitesmoke;
@@ -12,6 +12,12 @@
         table{
             margin-left: auto;
             margin-right: auto;
+        }
+        h1{
+            text-align: center;
+        }
+        #logo{
+            text-align: left;
         }
     </style>
 </head>
