--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
 </head>
 <div id="logo">
-<a href="/"><img id="WizkidsLogo.png" src="WizkidsLogo.png" alt="WizkidsLogo"></a>
+<a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
 <h1>Tilføj medarbejder</h1>
