--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -13,14 +13,20 @@
             margin-left: auto;
             margin-right: auto;
         }
+        h1{
+            text-align: center;
+        }
+        #logo{
+            text-align: left;
+        }
     </style>
 
 </head>
 <body>
-<h1>
-    <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
-    -Tilføj medarbejder
-</h1>
+<div id="logo">
+<a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
+</div>
+<h1>Tilføj medarbejder</h1>
 
     <form action="/addEmployee" method="post">
 
