--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -102,7 +102,7 @@ table{
     font-family: arial, sans-serif;
     width: auto;
     height: auto;
-    text-align: center;
+    text-align: left;
     padding-left: 20px;
     padding-right: 20px;
 }
