Return to list after add, delete and update

--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -38,11 +38,11 @@
 <table>
     <thead>
     <tr>
-        <th>Employee-ID: </th>
-        <th>Fornavn: </th>
-        <th>Efternavn: </th>
+        <th>Employee-ID</th>
+        <th>Fornavn</th>
+        <th>Efternavn</th>
         <th>E-mail</th>
-        <th>Telefon nummer: </th>
+        <th>Telefon nummer</th>
         <th></th>
     </tr>
     </thead>
