--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -36,12 +36,12 @@
 <table>
     <thead>
     <tr>
-        <th>Projekt-ID: </th>
-        <th>Projekt navn: </th>
-        <th>Beskrivelse: </th>
-        <th>Manager navn: </th>
-        <th>Forventet tid: </th>
-        <th>Brugt tid: </th>
+        <th>Projekt-ID</th>
+        <th>Projekt navn</th>
+        <th>Beskrivelse</th>
+        <th>Manager navn</th>
+        <th>Forventet tid</th>
+        <th>Brugt tid</th>
         <th></th>
     </tr>
 
