CSS: Grid på alle tabeller

--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -7,7 +7,6 @@
   <style>
 
       body{
-      background-color: whitesmoke;
       text-align: center;
       }
       table{
@@ -16,6 +15,9 @@
       }
       h1{
           text-align: center;
+      }
+      table, th, td {
+          border: 1px solid black;
       }
       #logo{
           text-align: left;
