--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/MyCss.css"/>
     <style>
         body {
-            backgund-color: whitesmoke;
-
+            text-align: center;
         }
         table{
             margin-left: auto;
