--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
-            background-color: whitesmoke;
             text-align: center;
         }
         table{
@@ -15,6 +14,9 @@
         }
         h1{
             text-align: center;
+        }
+        table, th, td {
+            border: 1px solid black;
         }
         #logo{
             text-align: left;
