--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
-            background-color: whitesmoke;
             text-align: center;
         }
         table{
@@ -16,9 +15,13 @@
         h1{
             text-align: center;
         }
+        table, th, td {
+            border: 1px solid black;
+        }
         #logo{
             text-align: left;
         }
+
     </style>
 </head>
 <body>
@@ -44,7 +47,7 @@
         <th>
             <a href="/addSession">
             <button class="green" id="btn-addProject">Opret session</button>
-        </a>
+            </a>
         </th>
     </tr>
     </thead>
