-Alle titler rette -h1'ere er rettet -font rettet

--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Employee List</title>
+    <title>Alle medarbejdere</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
@@ -16,7 +16,7 @@
             text-align: center;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid grey;
         }
 
         #logo{
@@ -31,7 +31,7 @@
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>Alle medarbejdere</h1>
+<h1>ALLE MEDARBEJDERE</h1>
 
 <a href="/addEmployee" id="addEmpBtn">
     <button class="green" id="btn-addEmployee">Opret ny Medarbejder</button>
