--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Update Session</title>
+    <title>Opdater session</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
@@ -16,7 +16,7 @@
             text-align: center;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid grey;
         }
         #logo{
             text-align: left;
@@ -29,7 +29,7 @@
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>Opdater session</h1>
+<h1>OPDATER SESSION</h1>
 
 <form action="/updateSession" method="post">
 
