--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -128,7 +128,7 @@ tr:nth-child(even){
 
 /* ///////////// TEXT /////////////// */
 h1{
-    font-family:"Times New Roman";
+    font-family:"Century Gothic";
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
 }
