--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -16,7 +16,7 @@
             text-align: center;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid grey;
         }
         #logo{
             text-align: left;
@@ -28,7 +28,7 @@
 <div id="logo">
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
-<h1>Tilføj medarbejder</h1>
+<h1>TILFØJ MEDARBEJDER</h1>
 
     <form action="/addEmployee" method="post">
 
