--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Menu</title>
+    <title>Hovedmenu</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css"/>
     <style>
         body {
