--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add project</title>
+    <title>Tilføj projekt</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
@@ -16,7 +16,7 @@
             text-align: center;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid grey;
         }
         #logo{
             text-align: left;
@@ -28,7 +28,7 @@
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>Tilføj medarbejder</h1>
+<h1>TILFØJ PROJEKT</h1>
 
 <form action="/addProject" method="post">
 
