--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Project List</title>
+    <title>Alle projekter</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
         body{
@@ -16,7 +16,7 @@
             text-align: center;
         }
         table, th, td {
-            border: 1px solid black;
+            border: 1px solid grey;
         }
         #logo{
             text-align: left;
@@ -29,7 +29,7 @@
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>Alle projekter</h1>
+<h1>ALLE PROJEKTER</h1>
 
 <a href="/addProject">
     <button class="green" id="btn-addProject">Opret projekt</button>
