--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tilføj session</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
   <style>
 
@@ -17,7 +17,7 @@
           text-align: center;
       }
       table, th, td {
-          border: 1px solid black;
+          border: 1px solid grey;
       }
       #logo{
           text-align: left;
@@ -29,7 +29,7 @@
 <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>Tilføj medarbejder</h1>
+<h1>TILFØJ MEDARBEJDER</h1>
 <form action="/addSession" method="post">
 
     <table>
