--- a/src/main/resources/Templates/Home/EmployeeList.html
+++ b/src/main/resources/Templates/Home/EmployeeList.html
@@ -5,35 +5,31 @@
     <title>Employee List</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
     <style>
-        body{
+        body {
             background-color: whitesmoke;
             text-align: center;
         }
-        table{
+        table {
             margin-left: auto;
             margin-right: auto;
         }
-        h1{
+
+        h1 {
             text-align: center;
         }
-
-        #logo{
+        #logo {
             text-align: left;
         }
-
     </style>
+
 </head>
 <body>
 
 <div id="logo">
-<a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
+    <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
 <h1>Alle medarbejdere</h1>
-
-<a href="/addEmployee" id="addEmpBtn">
-    <button class="green" id="btn-addEmployee">Opret ny Medarbejder</button>
-</a>
 
 <table>
     <thead>
@@ -43,7 +39,11 @@
         <th>Efternavn</th>
         <th>E-mail</th>
         <th>Telefon nummer</th>
-        <th></th>
+        <th>
+            <a href="/addEmployee" id="addEmpBtn">
+                <button class="green" id="btn-addEmployee">Opret ny Medarbejder</button>
+            </a>
+        </th>
     </tr>
     </thead>
     <tbody>
@@ -58,9 +58,9 @@
                 <button class="blue" id="btn-update">Opdater</button>
             </a>
 
-            <a td th:href="@{'/deleteEmployee/'+${employee.employeeID}}">
+           <!-- <a td th:href="@{'/deleteEmployee/'+${employee.employeeID}}">
                 <button class="red" id="btn-delete">Slet</button>
-            </a>
+            </a> -->
         </td>
     </tr>
     </tbody>
