--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -100,11 +100,10 @@ button.red:active {
 table{
     border-collapse: collapse;
     font-family: arial, sans-serif;
-    width: auto;
-    height: auto;
+    width: 1200px;
+    height: 100px;
     text-align: left;
     padding-left: 20px;
-    padding-right: 20px;
 }
 
 th{
@@ -118,14 +117,13 @@ th{
 tr{
     background-color: white;
     border-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 tr:nth-child(even){
     background-color: #cdd4ea
 }
-
 
 /* ///////////// TEXT /////////////// */
 h1{
