har ændret mellemrum

--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -130,6 +130,7 @@ h1{
     font-family:"Century Gothic";
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
+    padding-bottom: 10px;
 }
 
 #logo{
