--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -14,22 +14,20 @@
             margin-right: auto;
         }
         #main{
+            padding-top: 20px;
+            padding-bottom: 20px;
             padding-left: 43%;
             padding-right: 45%;
             margin-left: auto;
             margin-right: auto;
-            background-color: lightblue;
+            background-color: #8b86c3
         }
         h1{
             font-size: 40px;
             text-align: center;
             padding-bottom: 30px;
         }
-        #logo{
-            padding-left: 30px;
-            padding-top: 30px;
-            text-align: left;
-        }
+
         .blue
         {
             padding: 20px 50px;
