--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -104,6 +104,8 @@ table{
     height: 100px;
     text-align: left;
     padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th{
@@ -112,6 +114,13 @@ th{
     font-size: 16px;
     color: white;
     padding-right: 30px;
+
+}
+
+th, td{
+
+    border: 2px solid grey;
+
 }
 
 tr{
@@ -131,6 +140,7 @@ h1{
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
     padding-bottom: 10px;
+    text-align: center;
 }
 
 #logo{
